tests/ui/type-alias-impl-trait/hkl_forbidden4.stderr
error: item does not constrain `FutNothing::{opaque#0}`, but has it in its signature
  --> $DIR/hkl_forbidden4.rs:18:10
   |
LL | async fn call<F>(_f: F)
   |          ^^^^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/hkl_forbidden4.rs:10:23
   |
LL | type FutNothing<'a> = impl 'a + Future<Output = ()>;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: item does not constrain `FutNothing::{opaque#0}`, but has it in its signature
  --> $DIR/hkl_forbidden4.rs:22:1
   |
LL | / {
LL | |
LL | |
LL | | }
   | |_^
   |
   = note: consider moving the opaque type's declaration and defining uses into a separate module
note: this opaque type is in the signature
  --> $DIR/hkl_forbidden4.rs:10:23
   |
LL | type FutNothing<'a> = impl 'a + Future<Output = ()>;
   |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'any`
  --> $DIR/hkl_forbidden4.rs:14:5
   |
LL | async fn operation(_: &mut ()) -> () {
   |                       - this generic parameter must be used with a generic lifetime parameter
LL |
LL |     call(operation).await
   |     ^^^^^^^^^^^^^^^

error: concrete type differs from previous defining opaque type use
  --> $DIR/hkl_forbidden4.rs:12:1
   |
LL | async fn operation(_: &mut ()) -> () {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `FutNothing<'_>`, got `{async fn body of operation()}`
   |
note: previous use here
  --> $DIR/hkl_forbidden4.rs:14:5
   |
LL |     call(operation).await
   |     ^^^^^^^^^^^^^^^

error[E0792]: expected generic lifetime parameter, found `'any`
  --> $DIR/hkl_forbidden4.rs:22:1
   |
LL |   type FutNothing<'a> = impl 'a + Future<Output = ()>;
   |                   -- this generic parameter must be used with a generic lifetime parameter
...
LL | / {
LL | |
LL | |
LL | | }
   | |_^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0792`.
